[package]
name = "lara"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "*"
env_logger = "*"
log = "*"
quick-xml = "*"
reqwest = { version = "*", features = ["deflate", "gzip", "zstd"] }
select = "*"
texting_robots = "*"
tokio = { version = "*", features = ["sync", "macros", "io-util", "rt", "rt-multi-thread"] }
url = "*"

[dev-dependencies]
assertables = "*"
proptest = "*"

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3