[package]
name = "lara"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "*"
bytes = "*"
chrono = "*"
env_logger = "*"
log = "*"
quick-xml = "*"
reqwest = { version = "*", features = ["deflate", "gzip", "zstd"] }
select = "*"
texting_robots = "*"
tokio = { version = "*", features = ["fs", "io-util", "macros", "rt", "rt-multi-thread", "sync"] }
url = "*"
uuid = { version = "*", features = ["v4"] }

[dev-dependencies]
assertables = "*"
proptest = "*"

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3