[package]
name = "lara"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "*"
chrono = "*"
ctrlc = "*"
env_logger = "*"
flate2 = "*"
http = "*"
log = "*"
quick-xml = "*"
select = "*"
simple_moving_average = "*"
texting_robots = "*"
ureq = { version = "3.0.0-rc3", features = ["brotli", "charset", "gzip", "native-tls"]}
url = "*"
uuid = { version = "*", features = ["v4"] }

[dev-dependencies]
assertables = "*"
proptest = "*"

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3